# tempfile

./: Cargo.toml  LICENSE-MIT  search-index.js
libc/: struct.stat.html  struct.timeval.html  struct.tm.html  struct.utimbuf.html
src/: dir.rs  lib.rs  util.rs
src/file/: mod.rs  named.rs  unnamed.rs
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html  windows.rs.html
src/rand/: chacha.rs.html  isaac.rs.html  lib.rs.html  os.rs.html  rand_impls.rs.html  read.rs.html  reseeding.rs.html
src/tempfile/: dir.rs.html  lib.rs.html
src/winapi/: activation.rs.html  audioclient.rs.html  audiosessiontypes.rs.html  basetsd.rs.html  bcrypt.rs.html  cfg.rs.html  cfgmgr32.rs.html  combaseapi.rs.html  commctrl.rs.html  commdlg.rs.html  corsym.rs.html  d2d1.rs.html  d2dbasetypes.rs.html  d3d10shader.rs.html  d3d11.rs.html  d3d11shader.rs.html  d3d12.rs.html  d3d12sdklayers.rs.html  d3d12shader.rs.html  d3d9.rs.html  d3d9caps.rs.html  d3d9types.rs.html  d3dcommon.rs.html  d3dcompiler.rs.html  dbghelp.rs.html  dcommon.rs.html  devpropdef.rs.html  docobj.rs.html  dpapi.rs.html  dsgetdc.rs.html  dsound.rs.html  dsrole.rs.html  dwmapi.rs.html  dwrite.rs.html  dxgi.rs.html  (+128 more)
tempfile/: NamedTempFileBuilder.t.html  create_tempdir.v.html  fn.create_tempdir.html  fn.create_tempdir_in.html  fn.create_tempfile.html  fn.create_tempfile_in.html  fn.tempdir.html  fn.tempfile.html  fn.tempfile_in.html  index.html  sidebar-items.js  struct.NamedTempFile.html  struct.NamedTempFileBuilder.html  struct.NamedTempFileOptions.html  struct.PersistError.html  struct.TempDir.html  struct.TempFile.html
(+345 files in other folders)
