[package]
name = "tempfile"
version = "3.0.0"
authors = ["The Rust Project Developers", "Steven Allen <steven@stebalien.com>"]
description = """
A library for managing temporary files and directories.
"""

repository = "https://github.com/rust-lang/tempfile"
homepage = "https://github.com/rust-lang/tempfile"
documentation = "https://doc.rust-lang.org/tempfile"
keywords = ["fs", "file", "tempfile", "tmpfile", "filesystem"]
categories = ["filesystem"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "rust-lang-nursery/tempfile" }
appveyor = { repository = "rust-lang-libs/tempfile" }

[dependencies]
rand = "0.3"
remove_dir_all = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"
